# backend/src/dtos/person.dto.ts
@@ -1,0 +1,8 @@
+export interface PersonResponseType {
+  _id: string;
+  name: string;
+  kind: string;
+  description: string[];
+  contact?: string;
+  imageUrl?: string;
+}
